# lmmp

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENCE  README  build.rs  shell.nix
src/: gl.rs  main.cpp  main.rs  vorbfile.rs  widgets.rs  window.rs
src/track/: avf.rs  mod.rs  mp4.rs
src/window/: mod.rs
