[package]
name = "lmmp"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[features]
ui = ["imgui", "imgui-winit-support", "imgui-opengl-renderer", "glutin", "winit"]

[build-dependencies]
gl_generator = "^0.5"

[dependencies]
imgui = { version = "^0.7", optional = true }
imgui-winit-support = { version = "^0.7", optional = true }
imgui-opengl-renderer = { version = "^0.11", optional = true }
glutin = { version = "^0.26", optional = true }
winit = { version = "^0.24", optional = true }

walkdir = "^2.3"
id3 = "^0.6"
mp4ameta = "0.9.1"
ffmpeg-next = "^4.3"
anyhow = "^1"